[gd_scene load_steps=26 format=3 uid="uid://gs87arhqs1f"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_t6bfy"]
[ext_resource type="Script" path="res://fsm/state_machine.gd" id="2_5xt7o"]
[ext_resource type="Shader" path="res://damageFlash.gdshader" id="2_v06g1"]
[ext_resource type="Texture2D" uid="uid://b70tj1i6yri2b" path="res://enemy/enemy.png" id="2_ywu51"]
[ext_resource type="Script" path="res://fsm/patrol.gd" id="3_qqjj1"]
[ext_resource type="Script" path="res://fsm/chase.gd" id="4_t4ahc"]
[ext_resource type="Script" path="res://fsm/attack.gd" id="5_2wl5q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dighu"]
size = Vector2(26, 17)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xvtxy"]
resource_local_to_scene = true
shader = ExtResource("2_v06g1")
shader_parameter/flash_range = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1ct10"]
atlas = ExtResource("2_ywu51")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l37lc"]
atlas = ExtResource("2_ywu51")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_shi7p"]
atlas = ExtResource("2_ywu51")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7njh"]
atlas = ExtResource("2_ywu51")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_djxue"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_1ct10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l37lc")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shi7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7njh")
}],
"loop": false,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxebl"]
size = Vector2(18, 17)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sbvqy"]
radius = 18.0
height = 150.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8n73"]
size = Vector2(8, 3)

[sub_resource type="Animation" id="Animation_22wlu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_y72pu"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_x7vuf"]
resource_name = "move"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_loabw"]
_data = {
"RESET": SubResource("Animation_22wlu"),
"attack": SubResource("Animation_y72pu"),
"move": SubResource("Animation_x7vuf")
}

[sub_resource type="Animation" id="Animation_0d8g3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_range")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_td2y4"]
resource_name = "flash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_range")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ultqb"]
_data = {
"RESET": SubResource("Animation_0d8g3"),
"flash": SubResource("Animation_td2y4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjkq6"]
size = Vector2(22, 17)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_t6bfy")

[node name="Attack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AttackCollision" type="CollisionShape2D" parent="Attack"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_dighu")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_xvtxy")
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_djxue")
animation = &"attack"
frame = 1

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_sxebl")

[node name="Chase" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="ChaseCollision" type="CollisionShape2D" parent="Chase"]
position = Vector2(0, -8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_sbvqy")

[node name="FSM" type="Node" parent="."]
script = ExtResource("2_5xt7o")

[node name="Patrol" type="Node" parent="FSM"]
script = ExtResource("3_qqjj1")

[node name="Chase" type="Node" parent="FSM"]
script = ExtResource("4_t4ahc")

[node name="Attack" type="Node" parent="FSM"]
script = ExtResource("5_2wl5q")

[node name="ground" type="CollisionShape2D" parent="."]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_e8n73")

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2(16, 0)
target_position = Vector2(8, 15)

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_loabw")
}

[node name="AnimationFlash" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ultqb")
}

[node name="OnTouchAttack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="OnTouchAttackCollision" type="CollisionShape2D" parent="OnTouchAttack"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_tjkq6")

[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_attack_body_exited"]
[connection signal="body_entered" from="Chase" to="." method="_on_chase_body_entered"]
[connection signal="body_exited" from="Chase" to="." method="_on_chase_body_exited"]
[connection signal="body_entered" from="OnTouchAttack" to="." method="_on_on_touch_attack_body_entered"]
